fix: [PD-397] Recentsearch spacing issue

--- a/src/component/SearchOverlay/SearchOverlay.style.scss
+++ b/src/component/SearchOverlay/SearchOverlay.style.scss
@@ -58,6 +58,7 @@
         color : #000000;
         text-transform: uppercase;
         text-align: initial;
+        letter-spacing: 1.56px;
     }
 
     @include before-desktop() {
